--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-      "name": "Creative Academic Website Design",
+      "name": "creative-academic-website-design",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
